syntax = "proto3";

option go_package = "./pb";

message UserLoginRequest {
    string user = 1;
    string pass = 2;
}

message UserLoginResponse {
    string user_id = 1;
    string user = 2;
    string level = 3;
}

service UserService {
    rpc Login(UserLoginRequest) returns (UserLoginResponse) {}
}